--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -32,13 +32,21 @@
       <link rel="stylesheet" media="screen" href="css/ie.css">
 
     <![endif]-->
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+ 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+ 
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
      </head>
      <body  class="">
 <!--==============================header=================================-->
  <header> 
   <div class="container_12">
 		<div class="grid_12"> 
-		<h1><a href="hakkimizda.html"><img src="images/logo.png" alt="Gerald Harris attorney at law"></a> </h1>
+		<h1><a href="index.php"><img src="images/logo.png" alt="Gerald Harris attorney at law"></a> </h1>
 					
 				 
 					 <div class="clear"></div>
@@ -46,11 +54,11 @@
 					<div class="menu_block">
 					 <nav	class="" >
 						<ul class="sf-menu">
-									 <li><a href="ozgecmis.html">ÖZGECMİS</a></li>
-									 <li class="current"><a href="hakkimizda.html">Hakkımda</a></li>
+									 <li><a href="index.php">ÖZGEÇMİŞ</a></li>
+									 <li class="current"><a href="hakkimizda.html">HAKKIMDA</a></li>
 									 <li><a href="sehrim.html">SEHRİM</a></li>
-									 <li class="current"><a href="mirasimiz.html">MİRASIMIZ</a></li>
-									 <li><a href="giris.html">Kullanıcı Girisi</a></li>
+									 <li><a href="mirasimiz.html">MİRASIMIZ</a></li>
+									 <li><a href="giris.php">Kullanıcı Girisi</a></li>
 									 <li><a href="iletisim.html">ıletisim</a></li>
 								 </ul>
 							</nav>
@@ -67,7 +75,7 @@
   <div class="container_12">
       <div class="grid_12">
         <div class="">
-          <h3>Hakkımda</h3>
+          <h3>Hakkımızda</h3>
           <img src="images/ben_kamp.jpg" alt="" class="img_inner fleft">
           <p class="text1"><a href="#"> WHO AM I ? </a></p>
 			<p>Ben Fatmanur DEMİR. 21 yaşında daha önünde upuzun yolları olan bir genç... Bilgisyar mühendisliği 2. sınıf öğrencisiyim. Sakarya üniversitesinde 3. yılım. İlk sene hazırlık okuyarak hayatımdaki en güzel kararlardan birini vemiş bulundum. Güzel arkadaşlıklar ve güzel bir motivasyon ile bölümüme başladım. Yola böyle güzel başlamışken bu ders için aynı istikrarı gösteremedim ne yazık ki. Önümüzdeki dönem veririm canım ne varmış deyip kenara fırlattmıştım. Ama neyseki dersimiz aldım  ve o yüzden hocam güzel not versiniz değil miii :)))) LÜÜÜTFEEEENN :)  </p>
@@ -75,7 +83,7 @@
 			<p>	Yeniliklere  ve gelişime sonderece açık, eline geçen her fırsatı sonuna kadar değerlendirn bir insan olduğumu düşünüyorum.</p>
 			<p>Arkadaş canlısı, macera meraklısı, eğlence düşkünü birisiyimdir. Ama bazen bizim fakülte bile beni fazlasıyla darlayabiliyor :( </p>
 			<p> (PS: okumuşsunuzdur umarım) </p>
-		  </div>
+			</div>
       </div>
       <div class="clear"></div>
       <div class="grid_12">
@@ -84,17 +92,17 @@
       <div class="clear"></div>
 	  <div class="grid_12">
         <div class="">
-          <img src="images/cadır.jpg" alt="" class="img_inner fleft">
+         <img src="images/cadır.jpg" alt="" class="img_inner fleft">
           <p class="text1"><a href="#">HOBİLERİM</a></p>
 			<p>Arkadaş grubumla kamp yapabileceğimiz yerleri keşfedip oralara haftason çadırımızı, matımızı atıyoruz. Mental olarak arınmış ekilde gelip haftaya başlıyoruz. Herkese tavsiyemdir.  </p>
 			<p> Boş zamanlarımda resim defterimi açık birşeyler karalamayı,boyamayı ve çizmeyi ihmal etmem. Yine arkadaşlarla okulda sahaları boş buldukça basketbol ve voleybol maçları yaparız.  </p>
 			<p>Dizi ve film koliğiyimdir diyememe ama obsesiflik derecesinde olabilirim. Yelpazemin geniş olduğunu düşünüyorum. </p>
 			<p>  Kamp videomu izlemek isterseniz hemen aşağıdadır.
-				<figure class="img_inner fleft">
+			<figure class="img_inner fleft">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/JLfUCx4oH6E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		 		</figure>
 			</p>
-		  </div>
+			</div>
       </div>
       <div class="clear"></div>
       <div class="grid_12">
@@ -108,7 +116,7 @@
 			<p>Fikir ile gelecek öğrenci topluluğuna üyeyim ve orada proje ve AR-GE biriminde faliyetler gösteriyorum. G-Fast için projeler çıkardık ve onların ilerleyen süüreçleriyle uğraşıyoruz. Bunun yanında topluluğumuzla beraber Gençlik ve Spor Bakalanlığı'na ERASMUS+ projesi gönderdik.</p>
 			<p>IEEE de PES biriminde üyeyim. Bu sene bizim üniversitemizde yapılacak olan yarışma için hazırlanacak olan güneş panelli arabanın ekibinde ulundum. Zaten okuyacak insan sayısı sınırlı burda yazabilirim. Çok da bir iş yapmıyor bizim ieee o yüzden zamanımı daha değerli şeylere ayırmaya karar verdim.</p>
 			<p></p>
-		  </div>
+			</div>
       </div>
       <div class="clear"></div>
       <div class="grid_12">
@@ -123,19 +131,19 @@
 		<div class="container_12">
 			<div class="grid_2 prefix_2">
 				<ul>
-					<li><a href="ozgecmis.html">ÖZGECMİŞ</a></li>
-					<li><a href="hakkimizda.html">Hakkımızda</a></li>
+					<li><a href="index.php">ÖZGEÇMİŞ</a></li>
+					<li><a href="hakkimizda.html">HAKKIMDA</a></li>
 				</ul>
 			</div>
 			<div class="grid_2">
 				<ul>
-					<li><a href="sehrim.html">sehrim</a></li>
+					<li><a href="sehrim.html">SEHRİM</a></li>
 					<li><a href="mirasimiz.html">MİRASIMIZ</a></li>
 				</ul>
 			</div>
 			<div class="grid_2">
 				<ul>
-					<li><a href="giris.html">Kullanıcı Girişi</a></li>
+					<li><a href="giris.php">Kullanıcı Girişi</a></li>
 					<li><a href="iletisim.html">İletişim</a></li>
 				</ul>
 			</div>
