--- a/mirasimiz.html
+++ b/mirasimiz.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
      <head>
-     <title>Mirasımız - karasu.com</title>
-     <meta charset="utf-8">
+     <title>Turlarımız - karasu.com</title>
+     <meta http-equiv="Content-Type" 
+	container_12="text/html"; charset="utf-8">
      <link rel="icon" href="images/favicon.ico">
      <link rel="shortcut icon" href="images/favicon.ico" />
      <link rel="stylesheet" href="css/style.css">
@@ -32,13 +33,22 @@
       <link rel="stylesheet" media="screen" href="css/ie.css">
 
     <![endif]-->
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<!-- jQuery kütüphanesi -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<!--—En son yayınlanan JavaScript dosyası -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
      </head>
      <body  class="">
 <!--==============================header=================================-->
  <header> 
   <div class="container_12">
 		<div class="grid_12"> 
-		<h1><a href="hakkımızda.html"><img src="images/logo.png" alt="Gerald Harris attorney at law"></a> </h1>
+		<h1><a href="index.php"><img src="images/logo.png" alt="Gerald Harris attorney at law"></a> </h1>
 					
 				 
 					 <div class="clear"></div>
@@ -46,11 +56,11 @@
 					<div class="menu_block">
 					 <nav	class="" >
 						<ul class="sf-menu">
-									 <li><a href="index.php">Ana Sayfa</a></li>
-									 <li><a href="hakkimizda.html">Hakkımızda</a></li>
+									 <li><a href="index.php">ÖZGEÇMİŞ</a></li>
+									 <li><a href="hakkimizda.html">HAKKIMDA</a></li>
 									 <li><a href="sehrim.html">SEHRİM</a></li>
-									 <li class="current"><a href="mirasimiz.html">MİRASIMIZ</a></li>
-									 <li><a href="giris.html">Kullanıcı Girisi</a></li>
+									 <li <class="current"><a href="mirasimiz.html">MİRASIMIZ</a></li>
+									 <li><a href="giris.php">Kullanıcı Girisi</a></li>
 									 <li><a href="iletisim.html">ıletisim</a></li>
 								 </ul>
 							</nav>
@@ -64,11 +74,11 @@
 <!--=======content================================-->
 
 <div class="content">
-  <div class="container_12">
+  <div class="container_12" width="40%" >
       <div class="grid_12">
-        <div class="">
+        <div class="grid_12">
           <h3>Acarlar Longoz Gölü</h3>
-          <img src="images/acarlar.jpg" alt="" class="img_inner fleft">
+          <img src="images/acarlar.jpg" width="40%" alt="" class="img_inner fleft">
 			<p>Longoz, subasar orman ekosistemi olarak bilinen, tabanında çeşitli ağaç ve bitki türleriyle kaplı olan sulak alanlara denir. Kumullar nedeniyle denize ulaşamayan derelerin, bataklık alanlarda son bulması sonucu doğarlar. Taban suyu seviyesi kış ve ilkbahar aylarında artarken, sonbahar ve yaz aylarında çekilmektedir. Yazın suları çekilen longoz alanı köylülerce tarım arazisi olarak kullanılabilmektedir.</p>
 			<p>Acarlar Longozu olarak adlandırılan göl, Sakarya Nehri’nin Karadeniz’e döküldüğü, ağız kesiminin batısında yer alır. Alanının en büyük olduğu dönemde 1.562 hektar, derinliği ise 1,5 metredir. Acarlar Longozu, İğneada Longozundan sonra Türkiye'deki en büyük ikinci subasar ormanıdır. Göl orman, sulak alan, deniz kıyısı habitatları olmak üzere, pek çok ekosistemi ve göl tabanı da geçilmesi zor orman formasyonunu barındırır. Bu özellikleri sebebiyle birçok bitki ve hayvan türüne de ev sahipliği yapar. Deniz kıyısı habitatında yer alan kumul alanlar ortalama 5 metre yükseklikte olup sahile paralel uzanmaktadırlar. Acarlar Longozu, Türkiye’de kesintisiz uzanan en uzun kumul sistemine sahiptir. Bu kumullar bölgede pek çok derenin Karadeniz’e ulaşması engelleyerek, Acarlar Gölü’ nü meydana gelmiştir.</p>
 			<p>Gölün bünyesinde varlığını sürdüren canlı türleri de gölün önemini arttırmaktadır. Öncelikle kumul alanlarda yer alan bitki türlerinden bahsetmek gerekirse; karaya doğru 30 metrelik mesafeyi kaplayan ve Leymus racemosus ssp. sabulosus ile karakterize edilen, ön cephe kumul bitki topluluğu vardır. İlerisinde ender görülen kumul bitki türleri bakımından zengin olan, sabitleşmiş gri kumul bitki topluluğu görülmektedir. Bu bitki türleri arasında Centaurea kilaea, Jurinea kilaea, Matthiola fruticulosa bulunmaktadır. Çok lokal olarak bulunan Peucedanum obtusifobum ve ilk kez buradan toplanan Silene dichotoma ssp. euxina sayılabilir.</p>
@@ -86,7 +96,7 @@
       </div>
       <div class="clear"></div>
 	  <div class="grid_12">
-        <div class="">
+        <div class="grid_12">
 		<h3>Küçükboğaz Lagün Gölü</h3>
           <img src="images/bogazlongoz.jpg" alt="" class="img_inner fleft">
 			<p>50 hektar büyüklüğündeki Küçükboğaz Gölü ilçe merkezinin doğusunda 5 km mesafede yer alır. Etrafı çamlarla kaplı ve dinlendirici sessizliği ile Küçükboğaz Gölü, hafta sonları turistlerin uğrak yerlerinden biridir. Olta balıkçılığına açık olan bu gölde kızılkanat, sazan, tatlı su kefali gibi balık türleri de mevcuttur. </p>
@@ -100,7 +110,7 @@
       </div>
       <div class="clear"></div>
 	  <div class="grid_12">
-        <div class="">
+        <div class="grid_12">
 		<h3>Maden Deresi</h3>
           <img src="images/madenderesi.jpg" alt="" class="img_inner fleft">
 			<p>Karasu’da istediğiniz şeyi sadece hayal etmeniz yeterlidir. Diyelim ki deniz, kum, güneş üçlüsünden sıkıldınız ya da sıcak havadan bunaldınız, o zaman kendinizi ormanın derinliklerinden gelen kuş seslerine ve su şırıltısına bırakın. Çam Dağı’ ndan doğan Maden Deresi görülmeye değer yerlerden biridir.</p>
@@ -116,7 +126,7 @@
       </div>
       <div class="clear"></div>
 	  <div class="grid_12">
-        <div class="">
+        <div class="grid_12">
 		<h3>Yeni Mahalle</h3>
           <img src="images/yenimahalle.jpg" alt="" class="img_inner fleft">
 			<p>Yeni Mahalle, Karasu ilçesinin mahallerinden biri olup, ilçe merkezine uzaklığı 5 kilometredir. Yeni Mahalle, Karasu için diğer yerleşim birimlerine göre özel bir konuma sahiptir. Dinlendirici ve sakin sahili onu çekici kılmaktadır. Yeni Mahalle’nin denizle sonlandığı noktada, Sakarya Nehri de genişleyerek Karadeniz’le buluşur. Özellikle kış aylarında, denizin bir kabarıp bir sönen dalgalarıyla Sakarya Nehri’ni kabul edişini izlemek ayrı bir keyiftir.</p>
@@ -138,8 +148,8 @@
 		<div class="container_12">
 			<div class="grid_2 prefix_2">
 				<ul>
-					<li><a href="index.php">Ana Sayfa</a></li>
-					<li><a href="hakkimizda.html">Hakkımızda</a></li>
+					<li><a href="index.php">MİRASIMIZ</a></li>
+					<li><a href="hakkimizda.html">HAKKIMDA</a></li>
 				</ul>
 			</div>
 			<div class="grid_2">
@@ -150,7 +160,7 @@
 			</div>
 			<div class="grid_2">
 				<ul>
-					<li><a href="giris.html">Kullanıcı Girişi</a></li>
+					<li><a href="giris.php">Kullanıcı Girişi</a></li>
 					<li><a href="iletisim.html">İletişim</a></li>
 				</ul>
 			</div>
