--- a/sehrim.html
+++ b/sehrim.html
@@ -54,11 +54,11 @@
 					<div class="menu_block">
 					 <nav	class="" >
 						<ul class="sf-menu">
-									 <li><a href="index.php">Ana Sayfa</a></li>
+									 <li><a href="ozgecmis.html">ÖZGECMİS</a></li>
 									 <li><a href="hakkimizda.html">Hakkımızda</a></li>
 									 <li class="current"><a href="sehrim.html">SEHRİM</a></li>
 									 <li class="current"><a href="mirasimiz.html">MİRASIMIZ</a></li>
-									 <li><a href="giris.html">Kullanıcı Girisi</a></li>
+									 <li><a href="giris.php">Kullanıcı Girisi</a></li>
 									 <li><a href="iletisim.html">ıletisim</a></li>
 								 </ul>
 							</nav>
@@ -132,8 +132,8 @@
 		<div class="container_12">
 			<div class="grid_2 prefix_2">
 				<ul>
-					<li><a href="index.php">Ana Sayfa</a></li>
-					<li><a href="hakkimizda.html">Hakkımızda</a></li>
+					<li><a href="index.php">ÖZGEÇMİŞ</a></li>
+					<li><a href="hakkimizda.html">HAKKIMDA</a></li>
 				</ul>
 			</div>
 			<div class="grid_2">
@@ -144,7 +144,7 @@
 			</div>
 			<div class="grid_2">
 				<ul>
-					<li><a href="giris.html">Kullanıcı Girişi</a></li>
+					<li><a href="giris.php">Kullanıcı Girişi</a></li>
 					<li><a href="iletisim.html">İletişim</a></li>
 				</ul>
 			</div>
