--- a/sehrimLinki.html
+++ b/sehrimLinki.html
@@ -46,11 +46,11 @@
 					<div class="menu_block">
 					 <nav	class="" >
 						<ul class="sf-menu">
-									 <li><a href="index.php">Ana Sayfa</a></li>
+									 <li><a href="ozgecmis.html">ÖZGECMİS</a></li>
 									 <li class="current"><a href="hakkimizda.html">Hakkımızda</a></li>
 									 <li><a href="sehrim.html">SEHRİM</a></li>
 									 <li class="current"><a href="mirasimiz.html">MİRASIMIZ</a></li>
-									 <li><a href="giris.html">Kullanıcı Girisi</a></li>
+									 <li><a href="giris.php">Kullanıcı Girisi</a></li>
 									 <li><a href="iletisim.html">ıletisim</a></li>
 								 </ul>
 							</nav>
@@ -98,7 +98,7 @@
 			</div>
 			<div class="grid_2">
 				<ul>
-					<li><a href="giris.html">Kullanıcı Girişi</a></li>
+					<li><a href="giris.php">Kullanıcı Girişi</a></li>
 					<li><a href="iletisim.html">İletişim</a></li>
 				</ul>
 			</div>
