--- a/sehrimLinki3.html
+++ b/sehrimLinki3.html
@@ -38,7 +38,7 @@
  <header> 
   <div class="container_12">
 		<div class="grid_12"> 
-		<h1><a href="index.php"><img src="images/logo.png" alt="Gerald Harris attorney at law"></a> </h1>
+		<h1><a href="ozgecmis.html"><img src="images/logo.png" alt="Gerald Harris attorney at law"></a> </h1>
 					
 				 
 					 <div class="clear"></div>
@@ -46,11 +46,11 @@
 					<div class="menu_block">
 					 <nav	class="" >
 						<ul class="sf-menu">
-									 <li><a href="index.php">Ana Sayfa</a></li>
+									 <li><a href="ozgecmis.html">ÖZGECMİŞ</a></li>
 									 <li class="current"><a href="hakkimizda.html">Hakkımızda</a></li>
 									 <li><a href="sehrim.html">SEHRİM</a></li>
 									 <li class="current"><a href="mirasimiz.html">MİRASIMIZ</a></li>
-									 <li><a href="giris.html">Kullanıcı Girisi</a></li>
+									 <li><a href="giris.php">Kullanıcı Girisi</a></li>
 									 <li><a href="iletisim.html">ıletisim</a></li>
 								 </ul>
 							</nav>
@@ -86,7 +86,7 @@
 		<div class="container_12">
 			<div class="grid_2 prefix_2">
 				<ul>
-					<li><a href="index.php">Ana Sayfa</a></li>
+					<li><a href="ozgecmis.html">ÖZGECMİS</a></li>
 					<li><a href="hakkimizda.html">Hakkımızda</a></li>
 				</ul>
 			</div>
@@ -98,7 +98,7 @@
 			</div>
 			<div class="grid_2">
 				<ul>
-					<li><a href="giris.html">Kullanıcı Girişi</a></li>
+					<li><a href="giris.php">Kullanıcı Girişi</a></li>
 					<li><a href="iletisim.html">İletişim</a></li>
 				</ul>
 			</div>
